test/conformance/chainsaw/generate/validation/policy/prevent-loop/chainsaw-step-01-apply-1-1.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: pol-generate-prevent-loop-ns
