test/conformance/chainsaw/generate/validation/policy/prevent-loop/policy.yaml
apiVersion: kyverno.io/v1
kind: Policy
metadata:
  name: pol-generate-prevent-loop
  namespace: pol-generate-prevent-loop-ns
spec:
  rules:
  - name: pol-generate-prevent-loop
    match:
      any:
      - resources:
          kinds:
          - ConfigMap
          operations:
          - CREATE
    generate:
      apiVersion: v1
      kind: ConfigMap
      name: corp-{{ random('[0-9a-z]{8}') }}
      namespace: pol-generate-prevent-loop-ns
      synchronize: false
      data:
        data:
          foo: bar
