test/conformance/chainsaw/generate/validation/policy/prevent-loop/02-pass.yaml
---
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: TestStep
metadata:
  creationTimestamp: null
  name: pass
spec:
  timeouts: {}
  try:
  - apply:
      file: policy.yaml
