test/conformance/chainsaw/generate/validation/policy/prevent-loop/chainsaw-test.yaml
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  name: prevent-loop
spec:
  concurrent: false
  steps:
  - name: step-01
    try:
    - apply:
        file: chainsaw-step-01-apply-1-1.yaml
  - name: step-02
    try:
    - apply:
        file: policy.yaml
